update placeholder text

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -6,7 +6,9 @@
         <button mat-flat-button color="accent" (click)="onApplicationTypeChangeClicked()">
           Change Application Type
         </button>
-        <mat-icon color="accent" matTooltip="Ansley to fill in">help_outline</mat-icon>
+        <mat-icon color="accent" matTooltip="Changing application type will remove some inputs from your saved progress"
+          >help_outline</mat-icon
+        >
       </div>
     </div>
 
