--- a/portal-frontend/src/app/features/home/application-list/application-list.component.html
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.html
@@ -54,15 +54,9 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
-          <button [routerLink]="'/application/' + row.fileNumber" *ngIf="row.canEdit" mat-flat-button color="primary">
-            Edit
+          <button [routerLink]="'/application/' + row.fileNumber" *ngIf="row.canView" mat-flat-button color="primary">
+            View
           </button>
-
-          <button *ngIf="row.canEdit" mat-flat-button color="primary" (click)="onCancel(row.fileNumber)">Cancel</button>
-
-          <button *ngIf="row.canReview" mat-flat-button color="primary">Review</button>
-
-          <button *ngIf="row.canView" mat-flat-button color="primary">View</button>
         </td>
       </ng-container>
     </table>
