--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -2,21 +2,30 @@
   <mat-step label="Application" [stepControl]="firstForm">
     <div class="header">
       <h6>Application ID: {{ fileId }} | {{ applicationType }}</h6>
+      <div class="change-app-type-btn-wrapper">
+        <button mat-flat-button color="accent" (click)="onApplicationTypeChangeClicked()">
+          Change Application Type
+        </button>
+        <mat-icon color="accent" matTooltip="Changing application type will remove some inputs from your saved progress"
+          >help_outline</mat-icon
+        >
+      </div>
     </div>
+
     <app-parcel-entry></app-parcel-entry>
     <form [formGroup]="firstForm">
       <div class="form-row">
         <div>
-          <label for='applicant-last-name'>Applicant Last Name</label>
+          <label for="applicant-last-name">Applicant Last Name</label>
           <mat-form-field class="full-width-input" appearance="outline">
-            <input id='applicant-last-name' matInput placeholder="Type last name" formControlName="applicantName" />
+            <input id="applicant-last-name" matInput placeholder="Type last name" formControlName="applicantName" />
           </mat-form-field>
         </div>
         <div>
-          <label for='local-government'>Local/First Nation Government</label>
+          <label for="local-government">Local/First Nation Government</label>
           <mat-form-field class="full-width-input" appearance="outline">
             <input
-              id='local-government'
+              id="local-government"
               type="text"
               aria-label="Text"
               matInput
@@ -33,9 +42,15 @@
         </div>
       </div>
       <div>
-        <label for='file-upload'>Certificate of Title Upload</label>
+        <label for="file-upload">Certificate of Title Upload</label>
         <div class="documents">
-          <app-file-drag-drop id='file-upload' [uploadedFiles]='documents' (uploadFiles)="attachFile($event)" (deleteFile)='deleteFile($event)' (openFile)='openFile($event)'></app-file-drag-drop>
+          <app-file-drag-drop
+            id="file-upload"
+            [uploadedFiles]="documents"
+            (uploadFiles)="attachFile($event)"
+            (deleteFile)="deleteFile($event)"
+            (openFile)="openFile($event)"
+          ></app-file-drag-drop>
         </div>
       </div>
       <div class="step-buttons">
