refactor read more for create modal

--- a/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
+++ b/portal-frontend/src/app/features/create-application-dialog/create-application-dialog.component.html
@@ -62,7 +62,7 @@
     ></div>
     <span
       class="read-more-btn"
-      [ngClass]="{ 'display-none': !isReadMoreVisible() }"
+      [ngClass]="{ 'display-none': !isReadMoreVisible }"
       *ngIf="
         (selectedSubmissionType && currentStepIndex === submissionStep) ||
         (selectedAppType && currentStepIndex === applicationStep)
