--- a/portal-frontend/src/styles/typography.scss
+++ b/portal-frontend/src/styles/typography.scss
@@ -66,8 +66,12 @@ p,
   line-height: rem(16);
 }
 
-%button-text {
+.button-text {
   @include button-text;
+}
+
+.mat-button-toggle-button {
+  text-transform: unset; //Prevent button text above from upper casing toggle buttons
 }
 
 button {
@@ -84,6 +88,11 @@ button {
 
 .mat-radio-label-content {
   font-weight: 400;
+}
+
+.subtext {
+  @include typography-style(rem(12), 400);
+  line-height: rem(24);
 }
 
 @media screen and (min-width: $tabletBreakpoint) {
