--- a/portal-frontend/src/app/features/home/application-list/application-list.component.scss
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.scss
@@ -3,8 +3,8 @@
 
 .label {
   display: inline-block;
-  padding: 0.4rem 2rem;
-  border-radius: 1.6rem;
+  padding: rem(4) rem(16);
+  border-radius: rem(16);
   font-weight: bold;
 }
 
@@ -18,7 +18,8 @@
   color: $primary-color-dark;
 }
 
-.submitted-to-lg {
+.submitted-to-lg,
+.in-review {
   background-color: $secondary-color-light;
   color: $secondary-color-dark;
 }
