--- a/portal-frontend/src/app/features/view-application/view-application.component.scss
+++ b/portal-frontend/src/app/features/view-application/view-application.component.scss
@@ -1,6 +1,6 @@
-@import "../../../styles/functions";
-@import "../../../styles/colors";
-@import "../../../styles/typography";
+@import '../../../styles/functions';
+@import '../../../styles/colors';
+@import '../../../styles/typography';
 
 .content {
   margin-top: rem(24);
