--- a/portal-frontend/src/styles/buttons.scss
+++ b/portal-frontend/src/styles/buttons.scss
@@ -1,8 +1,13 @@
 @import 'colors';
+@import 'typography';
 
 .mat-flat-button,
 .mat-stroked-button {
   font-weight: 700 !important;
+
+  @media screen and (max-width: $tabletBreakpoint) {
+    line-height: 36px; //REMS IS BREAKING
+  }
 }
 
 .mat-stroked-button {
