--- a/portal-frontend/src/app/features/view-application/view-application.component.scss
+++ b/portal-frontend/src/app/features/view-application/view-application.component.scss
@@ -45,11 +45,12 @@
   justify-content: center;
   height: rem(56);
 
-  .action-bar-button {
-    display: none;
+  button {
+    width: 100%;
+    height: 100%;
+  }
 
-    @media screen and (min-width: $tabletBreakpoint) {
-      display: block;
-    }
+  .mat-icon {
+    margin-left: rem(6);
   }
 }
