Code Review Feedback

--- a/portal-frontend/src/app/shared/no-data/no-data.component.scss
+++ b/portal-frontend/src/app/shared/no-data/no-data.component.scss
@@ -13,8 +13,8 @@
 
   .mat-icon {
     margin-right: rem(4);
-    font-size: 14px;
-    width: 14px;
-    height: 14px;
+    font-size: rem(14);
+    width: rem(14);
+    height: rem(14);
   }
 }
