--- a/portal-frontend/src/styles/typography.scss
+++ b/portal-frontend/src/styles/typography.scss
@@ -63,7 +63,11 @@ p,
   @include typography-style(rem(14), 700);
   text-transform: uppercase;
   letter-spacing: 0.01rem;
-  line-height: rem(16);
+  line-height: rem(32);
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    line-height: rem(16);
+  }
 }
 
 .button-text {
