--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -1,8 +1,99 @@
+// @import '../../../styles/typography';
+// @import '../../../styles/functions';
+
+// .header {
+//   margin: 2em 0;
+//   display: flex;
+//   justify-content: space-between;
+//   flex-flow: row wrap;
+
+//   h6 {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//   }
+
+//   .change-app-type-btn-wrapper {
+//     margin: rem(16) 0;
+
+//     .mat-icon {
+//       vertical-align: middle;
+//       margin-left: rem(8);
+//       width: rem(20);
+//       height: rem(20);
+//       font-size: rem(22);
+//     }
+//   }
+
+//   @media screen and (min-width: $tabletBreakpoint) {
+//     .mat-icon {
+//       margin-left: rem(16);
+//       font-size: rem(24);
+//       width: rem(24);
+//       height: rem(24);
+//     }
+//   }
+// }
+
+// .form-row {
+//   display: grid;
+//   grid-template-columns: 1fr;
+//   grid-column-gap: 4%;
+
+//   @media screen and (min-width: $desktopBreakpoint) {
+//     & {
+//       grid-template-columns: 1fr 1fr;
+//     }
+//   }
+// }
+
+// .full-width-input {
+//   width: 100%;
+// }
+
+// .documents {
+//   margin-top: 0.5em;
+// }
+
+// .step-buttons {
+//   margin-top: 3em;
+//   display: flex;
+//   justify-content: space-between;
+// }
+
+// :host::ng-deep {
+//   .mat-horizontal-content-container {
+//     padding: 0;
+//   }
+
+//   .mat-step-header .mat-step-icon-selected {
+//     color: #fff;
+//   }
+
+//   .mat-step-header .mat-step-label.mat-step-label-active {
+//     display: none;
+//   }
+
+//   .mat-step-label {
+//     display: none;
+//   }
+
+//   @media screen and (min-width: $tabletBreakpoint) {
+//     .mat-step-header .mat-step-label.mat-step-label-active {
+//       display: inherit;
+//     }
+
+//     .mat-step-label {
+//       display: inherit;
+//     }
+//   }
+// }
+
 @import '../../../styles/typography';
 @import '../../../styles/functions';
 
 .header {
-  margin: 2em 0;
+  margin: rem(24) 0;
   display: flex;
   justify-content: space-between;
   flex-flow: row wrap;
@@ -35,35 +126,18 @@
   }
 }
 
-.form-row {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-column-gap: 4%;
-
-  @media screen and (min-width: $desktopBreakpoint) {
-    & {
-      grid-template-columns: 1fr 1fr;
-    }
-  }
-}
-
-.full-width-input {
-  width: 100%;
-}
-
-.documents {
-  margin-top: 0.5em;
-}
-
-.step-buttons {
-  margin-top: 3em;
-  display: flex;
-  justify-content: space-between;
-}
-
 :host::ng-deep {
   .mat-horizontal-content-container {
     padding: 0;
+    min-height: 100%;
+  }
+
+  .mat-horizontal-stepper-wrapper {
+    min-height: 100%;
+  }
+
+  .subtext {
+    margin: rem(8) 0 !important;
   }
 
   .mat-step-header .mat-step-icon-selected {
@@ -85,6 +159,127 @@
 
     .mat-step-label {
       display: inherit;
+    }
+  }
+
+  .review-step {
+    min-height: 100%;
+  }
+
+  .mobile-hidden {
+    display: none;
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      display: contents;
+    }
+  }
+
+  .tablet-hidden {
+    display: contents;
+
+    @media screen and (min-width: $tabletBreakpoint) {
+      display: none;
+    }
+  }
+
+  .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+    line-height: rem(33);
+  }
+
+  .mat-button-toggle-checked.mat-button-toggle-appearance-standard {
+    background-color: $primary-color-light;
+  }
+
+  .review-application {
+    .description {
+      margin-top: rem(12);
+      margin-bottom: rem(20);
+      display: flex;
+      flex-direction: column;
+
+      div {
+        display: flex;
+        align-items: center;
+      }
+
+      .save-button {
+        margin-top: rem(16) !important;
+        width: 100%;
+      }
+
+      @media screen and (min-width: $tabletBreakpoint) {
+        flex-direction: row;
+        justify-content: space-between;
+
+        .save-button {
+          margin-left: rem(12) !important;
+          margin-top: unset !important;
+          width: unset;
+        }
+      }
+    }
+
+    .form-row {
+      margin-top: rem(16);
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-column-gap: rem(30);
+      grid-row-gap: rem(6);
+
+      @media screen and (min-width: $tabletBreakpoint) {
+        grid-row-gap: rem(24);
+      }
+
+      @media screen and (min-width: $desktopBreakpoint) {
+        & {
+          grid-template-columns: 1fr 1fr;
+        }
+
+        .full-row {
+          grid-column: 1/3;
+        }
+      }
+    }
+
+    .input {
+      margin-top: rem(5);
+      width: 100%;
+
+      .mat-button-toggle {
+        width: 100%;
+      }
+    }
+
+    .button-container {
+      margin-top: rem(40);
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-between;
+
+      @media screen and (min-width: $tabletBreakpoint) {
+        flex-direction: row;
+        justify-content: space-between;
+      }
+
+      div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: rem(8);
+
+        @media screen and (min-width: $tabletBreakpoint) {
+          display: flex;
+          justify-content: space-between;
+        }
+
+        button {
+          margin-bottom: rem(24) !important;
+
+          @media screen and (min-width: $tabletBreakpoint) {
+            margin-left: rem(24) !important;
+            margin-bottom: 0 !important;
+          }
+        }
+      }
     }
   }
 }
