--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.scss
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.scss
@@ -1,12 +1,23 @@
 @import '../../../../../styles/functions';
 @import '../../../../../styles/typography';
 
+.float-right {
+  float: right;
+}
+
 .container {
   margin: rem(20) 0 rem(40) 0;
 }
 
 .type {
   margin-bottom: rem(30);
+}
+
+.pmbc-search {
+  border: 1px solid $primary-color-dark;
+  border-radius: rem(4);
+  background-color: rgba($accent-color-light, 0.2);
+  padding: rem(16);
 }
 
 .form-row {
@@ -17,11 +28,11 @@
 
   @media screen and (min-width: $desktopBreakpoint) {
     & {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
     }
 
     .full-row {
-      grid-column: 1/3;
+      grid-column: 1/4;
     }
   }
 }
