--- a/portal-frontend/src/app/features/review-application/review-ocp/review-ocp.component.html
+++ b/portal-frontend/src/app/features/review-application/review-ocp/review-ocp.component.html
@@ -37,7 +37,7 @@
         </mat-form-field>
       </div>
       <div class="full-row">
-        <label for="is-consistent">Is the application parcel(s) subject to a Local Government OCP designation?</label>
+        <label for="is-consistent">Is this proposal consistent with the current OCP designation?</label>
         <mat-button-toggle-group class="input" id="is-consistent" formControlName="isOCPConsistent">
           <mat-button-toggle value="true">Yes</mat-button-toggle>
           <mat-button-toggle value="false">No</mat-button-toggle>
