--- a/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.scss
+++ b/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.scss
@@ -10,6 +10,11 @@ section {
   margin-bottom: rem(24);
 }
 
+.link {
+  color: $link-color;
+  cursor: pointer;
+}
+
 :host::ng-deep {
   .mat-expansion-panel {
     box-shadow: none;
