--- a/portal-frontend/src/app/features/review-application/review-application.component.html
+++ b/portal-frontend/src/app/features/review-application/review-application.component.html
@@ -23,10 +23,10 @@
   </mat-step>
   <mat-step label="Attachments">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <app-review-attachments></app-review-attachments>
+    <app-review-attachments [$application]='$application'></app-review-attachments>
   </mat-step>
   <mat-step label="Review & Submit">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <app-review-submit [stepper]='stepper'></app-review-submit>
+    <app-review-submit [$application]='$application' [stepper]='stepper'></app-review-submit>
   </mat-step>
 </mat-stepper>
