--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -52,7 +52,7 @@
       <div>
         <label for="pin">PID</label>
         <mat-form-field class="full-width-input" appearance="outline">
-          <input id="pin" type="number" matInput placeholder="Enter PIN" formControlName="pin" />
+          <input id="pid" type="number" matInput placeholder="Enter PID" formControlName="pid" />
         </mat-form-field>
       </div>
       <div>
